--- a/Views/Home/PromotionForm.cshtml
+++ b/Views/Home/PromotionForm.cshtml
@@ -1,8 +1,10 @@
-﻿@model Promotion
+﻿@model PromotionViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    ViewData["Title"] = (Model == null ? "Nouvelle promotion" : "Détail de la promotion du "+Model.DateDebut.ToString("dd MMM yyyy")+" au "+Model.DateFin.ToString("dd MMM yyyy"));
-
+    if (Model.Promotion == null || Model.Promotion.PromotionID==0)
+        ViewData["Title"] = "Nouvelle promotion";
+    else
+        ViewData["Title"] = "Détail de la promotion du " + ((DateTime)Model.Promotion.DateDebut).ToString("dd MMM yyyy") + " au " + ((DateTime)Model.Promotion.DateFin).ToString("dd MMM yyyy");
 }
 
 <!DOCTYPE html>
@@ -19,28 +21,36 @@
         <hr />
     </div>
 
-    <form asp-action="PromotionForm" method="post" class="m-2">
-        <input type="hidden" asp-for="PromotionID" readonly class="form-control" value=@(Model==null ? 0 :@Model.PromotionID) />
+	<form asp-action="PromotionForm" method="post" class="m-2">
+        <input type="hidden" asp-for="Promotion.PromotionID" readonly class="form-control" value=@(Model.Promotion==null ? 0 : Model.Promotion.PromotionID) />
+        <input type="hidden" asp-for="ProduitID" readonly class="form-control" value=@(Model.ProduitID) />
+        <input type="hidden" asp-for="ModeCreation" readonly class="form-control" value=@(Model.ModeCreation) />
         <div class ="form-group">
-            @Html.LabelFor(m => m.DateDebut)
-            <input type="date" asp-for="DateDebut" class="form-control" value=@(Model==null ? "" :@Model.DateDebut.ToString("yyyy-MM-dd")) />
-			@Html.ValidationMessageFor(m => m.DateDebut, "", new { @class = "text-danger" })
+            @Html.LabelFor(m => m.Promotion.DateDebut)
+            <input type="date" asp-for="Promotion.DateDebut" class="form-control" value=@(Model.Promotion==null || Model.Promotion.DateDebut ==null ? "" : ((DateTime)Model.Promotion.DateDebut).ToString("yyyy-MM-dd")) />
+            @Html.ValidationMessageFor(m => m.Promotion.DateDebut, "", new { @class = "text-danger" })
 
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.DateFin)
-            <input type="date" asp-for="DateFin" class="form-control" value=@(Model==null ? "" :@Model.DateFin.ToString("yyyy-MM-dd")) />
-            @Html.ValidationMessageFor(m => m.DateFin, "", new { @class = "text-danger" })
+            @Html.LabelFor(m => m.Promotion.DateFin)
+            <input type="date" asp-for="Promotion.DateFin" class="form-control" value=@(Model.Promotion==null || Model.Promotion.DateFin ==null ? "" :((DateTime)Model.Promotion.DateFin).ToString("yyyy-MM-dd")) />
+            @Html.ValidationMessageFor(m => m.Promotion.DateFin, "", new { @class = "text-danger" })
 
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.Remise)
-            <input type="number" asp-for="Remise" class="form-control" />
-            @Html.ValidationMessageFor(m => m.Remise, "", new { @class = "text-danger" })
+            @Html.LabelFor(m => m.Promotion.Remise)
+            <input type="number" asp-for="Promotion.Remise" class="form-control" />
+            @Html.ValidationMessageFor(m => m.Promotion.Remise, "", new { @class = "text-danger" })
         </div>
 
-        <button type="submit">Enregistrer la promotion</button>
+        <button  type="submit">Enregistrer la promotion</button>
+        @if (Model.Promotion != null && Model.Promotion.PromotionID != 0)
+        {
+            <button asp-action="SupprimePromotion" type="submit" onclick="return confirm('Confirmez-vous la suppression de cette promotion ?')">Supprimer la promotion</button>
+        }
+
     </form>
+    
     <div asp-validation-summary="All"></div>
 </body>
 </html>
